--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,105 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:columnCount="4"
-    android:rowCount="6">
+    android:padding="@dimen/view_layout_margin"
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/main_screen"
-        style="@style/MyAppTextView"
-        android:layout_columnSpan="3"
-        android:textSize="@dimen/text_size_raised"
-        android:textStyle="bold"
-        tools:text="answer" />
-
-    <Button
-        android:id="@+id/button_C"
-        style="@style/MyAppButtons"
-        android:layout_rowSpan="2"
-        android:text="@string/button_c" />
+        android:id="@+id/title_saved_answers"
+        style="@style/AppMainTextView.Title"
+        android:text="@string/saved_answers"
+        app:layout_constraintBottom_toTopOf="@id/saved_answers"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-        android:id="@+id/secondary_screen"
-        style="@style/MyAppTextView"
-        android:layout_columnSpan="3"
-        tools:text="very_very_very_very_very_very_very_very_long_expression" />
+        android:id="@+id/saved_answers"
+        style="@style/AppMainTextView"
+        android:maxLines="5"
+        app:layout_constraintBottom_toTopOf="@id/title_current_answer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_saved_answers"
+        tools:text="1\n2\n3\n4\n5" />
+
+    <TextView
+        android:id="@+id/title_current_answer"
+        style="@style/AppMainTextView.Title"
+        android:text="@string/title_current_answer"
+        app:layout_constraintBottom_toTopOf="@id/save_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/saved_answers" />
+
+    <TextView
+        android:id="@+id/current_answer"
+        style="@style/AppMainTextView"
+        app:layout_constraintBottom_toBottomOf="@id/save_button"
+        app:layout_constraintEnd_toStartOf="@id/save_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/save_button"
+        tools:text="25" />
 
     <Button
-        android:id="@+id/button_7"
-        style="@style/MyAppButtons"
-        android:text="@string/button_7" />
+        android:id="@+id/save_button"
+        style="@style/AppMainButtons"
+        android:text="@string/button_save_answer"
+        app:layout_constraintBottom_toTopOf="@id/calculator_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/current_answer"
+        app:layout_constraintTop_toBottomOf="@id/title_current_answer" />
 
     <Button
-        android:id="@+id/button_8"
-        style="@style/MyAppButtons"
-        android:text="@string/button_8" />
-
-    <Button
-        android:id="@+id/button_9"
-        style="@style/MyAppButtons"
-        android:text="@string/button_9" />
-
-    <Button
-        android:id="@+id/button_division"
-        style="@style/MyAppButtons"
-        android:text="@string/button_division" />
-
-    <Button
-        android:id="@+id/button_4"
-        style="@style/MyAppButtons"
-        android:text="@string/button_4" />
-
-    <Button
-        android:id="@+id/button_5"
-        style="@style/MyAppButtons"
-        android:text="@string/button_5" />
-
-    <Button
-        android:id="@+id/button_6"
-        style="@style/MyAppButtons"
-        android:text="@string/button_6" />
-
-    <Button
-        android:id="@+id/button_multiplication"
-        style="@style/MyAppButtons"
-        android:text="@string/button_multiplication" />
-
-    <Button
-        android:id="@+id/button_1"
-        style="@style/MyAppButtons"
-        android:text="@string/button_1" />
-
-    <Button
-        android:id="@+id/button_2"
-        style="@style/MyAppButtons"
-        android:text="@string/button_2" />
-
-    <Button
-        android:id="@+id/button_3"
-        style="@style/MyAppButtons"
-        android:text="@string/button_3" />
-
-    <Button
-        android:id="@+id/button_minus"
-        style="@style/MyAppButtons"
-        android:text="@string/button_minus" />
-
-    <Button
-        android:id="@+id/button_0"
-        style="@style/MyAppButtons"
-        android:layout_columnSpan="2"
-        android:text="@string/button_0" />
-
-    <Button
-        android:id="@+id/button_equal"
-        style="@style/MyAppButtons"
-        android:text="@string/button_equal" />
-
-    <Button
-        android:id="@+id/button_plus"
-        style="@style/MyAppButtons"
-        android:text="@string/button_plus" />
-</GridLayout>
+        android:id="@+id/calculator_button"
+        style="@style/AppMainButtons"
+        android:text="@string/button_calculator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/save_button" />
+</androidx.constraintlayout.widget.ConstraintLayout>
