--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="text_size_main">14sp</dimen>
     <dimen name="text_size_raised">18sp</dimen>
     <dimen name="view_layout_margin">2dp</dimen>
+    <dimen name="view_layout_margin_title">8dp</dimen>
     <dimen name="text_view_padding_bottom">8dp</dimen>
 </resources>
